--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-{% extends "base.html" %} {% block content %}
+{% extends "templates/base.html" %} {% block content %}
 <h2>Здравствуй, дорогой читатель!</h2>
 <p>Добро пожаловать в уголок мистики и тайн!</p>
 <p>
@@ -8,16 +8,16 @@
 </p>
 <p>О чем же, дорогой читатель, ты бы хотел узнать прямо сейчас?</p>
 <ul>
-  <li><a href="/world" style="color: black">История создания мира</a></li>
-  <li><a href="/edem" style="color: black">Эдем</a></li>
-  <li><a href="/hell" style="color: black">Тартар</a></li>
-  <li><a href="/hist" style="color: black">История Эдема и Тартара</a></li>
-  <li><a href="/earth" style="color: black">Земля</a></li>
-  <li><a href="/fantom" style="color: black">Призраки</a></li>
-  <li><a href="/face" style="color: black">Личности</a></li>
-  <li><a href="/dr" style="color: black">Другие вселенные</a></li>
+  <li><a href="/templates/world" style="color: black">История создания мира</a></li>
+  <li><a href="/templates/edem" style="color: black">Эдем</a></li>
+  <li><a href="/templates/hell" style="color: black">Тартар</a></li>
+  <li><a href="/templates/hist" style="color: black">История Эдема и Тартара</a></li>
+  <li><a href="/templates/earth" style="color: black">Земля</a></li>
+  <li><a href="/templates/fantom" style="color: black">Призраки</a></li>
+  <li><a href="/templates/face" style="color: black">Личности</a></li>
+  <li><a href="/templates/dr" style="color: black">Другие вселенные</a></li>
   {% if current_user.is_authenticated %}
-  <li><a href="/promo" style="color: black">Промокоды</a></li>
+  <li><a href="/templates/promo" style="color: black">Промокоды</a></li>
   {% endif %}
 </ul>
 {% endblock %}
