--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-{% extends "templates/base.html" %} {% block content %}
+{% extends "/templates/base.html" %} {% block content %}
 <h2>Здравствуй, дорогой читатель!</h2>
 <p>Добро пожаловать в уголок мистики и тайн!</p>
 <p>
