--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html lang="ru">
 {% extends "/base.html" %} {% block content %}
 <h2>Здравствуй, дорогой читатель!</h2>
 <p>Добро пожаловать в уголок мистики и тайн!</p>
