--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </p>
 <p>О чем же, дорогой читатель, ты бы хотел узнать прямо сейчас?</p>
 <ul>
-  <li><a href="/templates/world" style="color: black">История создания мира</a></li>
+  <li><a href="world" style="color: black">История создания мира</a></li>
   <li><a href="/templates/edem" style="color: black">Эдем</a></li>
   <li><a href="/templates/hell" style="color: black">Тартар</a></li>
   <li><a href="/templates/hist" style="color: black">История Эдема и Тартара</a></li>
