--- a/world.html
+++ b/world.html
@@ -36,5 +36,5 @@
     демонами, пытавшими души грешников. Сжалились Всевышний Бог и Великая Тьма над творениями своими, да создали еще
     один мир, куда отправлялись души, уровень чистоты которых был промежуточным и недостаточным для Ада или Рая, и
     назвали они его Мир Призраков.</p>
-    <h5><a href="/" style="color: black">&lt;- Назад</a></h5>
+    <h5><a href="/index.html" style="color: black">&lt;- Назад</a></h5>
 {% endblock %}
