--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 {% extends "/base.html" %} {% block content %}
+  <link rel="import" href="base.html">
 <h2>Здравствуй, дорогой читатель!</h2>
 <p>Добро пожаловать в уголок мистики и тайн!</p>
 <p>
