--- a/earth.html
+++ b/earth.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block content %}
+
 <h2>Земля</h2>
 <h3>Навигация</h3>
 <nav>
@@ -71,5 +71,4 @@
   количествах складируются светлые артефакты. На защите каждой из пирамид стоит хранитель, избираемый из простых жителей прилежащего 
   населенного пункта.</p>
 <p>Хранители без труда способны подчинять себе абсолютно любые артефакты, даже защищенные мощной магией.</p>
-<h5><a href="/" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+<h5><a href="index" style="color: black">&lt;- Назад</a></h5>
