--- a/edem.html
+++ b/edem.html
@@ -1,6 +1,3 @@
-{% extends "base.html" %}
-
-{% block content %}
 <h2>Эдем</h2>
     <p>Эдем (Рай) - мир, состоящий из нескольких "небес", где живут разного рода ангелы.</p>
     <h3>Навигация</h3>
@@ -83,5 +80,5 @@
         <li>Чумуил - любовь и чувства</li>
         <li>Уриил - вера и искусство</li>
     </ul>
-    <h5><a href="/" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+    <h5><a href="index" style="color: black">&lt;- Назад</a></h5>
+
