--- a/fantom.html
+++ b/fantom.html
@@ -1,7 +1,3 @@
-{% extends "base.html" %}
-
-{% block content %}
 <h2>Призраки</h2>
     <p>В разработке.</p>
-    <h5><a href="/" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+    <h5><a href="index" style="color: black">&lt;- Назад</a></h5>
