--- a/hell.html
+++ b/hell.html
@@ -1,4 +1,3 @@
-{% extends "base.html" %} {% block content %}
 <h2>Тартар</h2>
 <p>Тартар (Ад) - мир, где живут разного рода демоны.</p>
 <h3>Навигация</h3>
@@ -163,5 +162,5 @@
   подвергается пыткам, в ходе которых из нее вытягивает силы сама преисподняя для распределения магии между демонами.</p>
 <p>Сильные души, что смогли подняться с сырой земли и пересечь лес, отделяющий грешные земли от основного Ада, становятся бесами (низшие 
 демоны). Они магически слабы, но все же являются полноправными гражданами Тартара.</p>
-<h5><a href="/" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+<h5><a href="index" style="color: black">&lt;- Назад</a></h5>
+
