--- a/hist.html
+++ b/hist.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
 
-{% block content %}
 <h2>История Эдема и Тартара</h2>
     <p>Первыми созданными ангелами стали Серафимы Люцифер и Самаэль, правившие Раем бок о бок. </p>
     <p>Жили ангелы на 4 небесах, не зная горя, следовали правилам, установленным Всевышним, вот только не устраивали они
@@ -55,5 +53,4 @@
         же отправились и его старшие помощники: Амаимон, Асмодей, Левиафан, Бельфегор, Вельзевул и Маммон. Остальные
         участники великой революции Люцифера попали под суд и пали следом за предводителем и его помощниками, которых
         уже готовил Искуситель к принятию трона Адского.</p>
-    <h5><a href="/" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+    <h5><a href="index" style="color: black">&lt;- Назад</a></h5>
