--- a/world.html
+++ b/world.html
@@ -1,6 +1,4 @@
-{% extends "base" %}
 
-{% block content %}
 <h2>История создания мира</h2>
     <p>Во времена, когда вселенной не было в помине, по бескрайней пустоте путешествовали два существа: брат и сестра,
     символизировавшие свет и тень, созидание и разрушение. Силы их былибезграничны, как и фантазия, от чего решили брат
@@ -36,5 +34,5 @@
     демонами, пытавшими души грешников. Сжалились Всевышний Бог и Великая Тьма над творениями своими, да создали еще
     один мир, куда отправлялись души, уровень чистоты которых был промежуточным и недостаточным для Ада или Рая, и
     назвали они его Мир Призраков.</p>
-    <h5><a href="/index.html" style="color: black">&lt;- Назад</a></h5>
-{% endblock %}
+    <h5><a href="index" style="color: black">&lt;- Назад</a></h5>
+
